--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  author: Craig Wilson
+  author: crgwilson
   description: Create and delete users and groups
   license: Apache v2
   min_ansible_version: 2.4
