Add tests for debian 10 and centos 8, add support for changing user passwords

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,6 +17,7 @@
     group: "{{ item.key }}"
     groups: "{{ item.value.groups | default(omit) }}"
     shell: "{{ item.value.shell | default('/bin/bash') }}"
+    password: "{{ item.value.password | default(omit) }}"
     append: true
     create_home: true
     remove: true
