Add support for user comments

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,6 +18,7 @@
     groups: "{{ item.value.groups | default(omit) }}"
     shell: "{{ item.value.shell | default('/bin/bash') }}"
     password: "{{ item.value.password | default(omit) }}"
+    comment: "{{ item.value.comment | default(omit) }}"
     append: true
     create_home: true
     remove: true
